--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,45 @@
 <html>
-
 <head>
+	<title> Jiramate </title>
+	<script src="jquery-3.2.1.min.js" type="text/javascript" ></script>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <h1> Jiramate Leingprom </h1>
-  <h2> KMITl </h2>
- </body>
- </html>
+	<div class="container">
+		<h1>Jiramate's Info</h1>
+		
+		
+		<div class="row">
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<img src="meow.gif" alt="image">
+				</div>
+			</div>
+			<div class="col-md-8">
+				<div class="panel panel-danger">
+					<div class="panel-heading">
+					Education BG</div>
+					<ul class="list-group">
+					<li class="list-group-item">
+					<span class="badge">114</span>
+						Udonpittayanukoon
+					</li>
+					<li class="list-group-item">
+					<span class="badge">55</span>
+						KMITL
+					</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
+</html>
