--- a/mqtt2.html
+++ b/mqtt2.html
@@ -54,7 +54,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-warning">
 				  <div class="panel-heading">
-					<h3 class="panel-title">Neighbour Home</h3>
+					<h3 class="panel-title">Neighbour</h3>
 				  </div>
 				  <div class="panel-body">
 					<span id="temp" class="mqtt-value">-</span>
