--- a/mqtt2.html
+++ b/mqtt2.html
@@ -65,7 +65,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-info">
 				  <div class="panel-heading">
-					<h3 class="panel-title">Tempulature In Home</h3>
+					<h3 class="panel-title">Tempurature In Home</h3>
 				  </div>
 				  <div class="panel-body">
 					<span id="ice" class="mqtt-value">0</span>°C
@@ -84,31 +84,7 @@
 				</div>
 			</div>
 		</div>
-		
-		<div class="row">
-			<div class="col-md-4">
-				<div class="panel panel-danger">
-				  <div class="panel-heading">
-					<h3 class="panel-title">kmitl/cie/random/x1</h3>
-				  </div>
-				  <div class="panel-body">
-					<span id="x1" class="mqtt-value">0</span>
-				  </div>
-				</div>
-			</div>
-			
-			<div class="col-md-4">
-				<div class="panel panel-info">
-				  <div class="panel-heading">
-					<h3 class="panel-title">kmitl/cie/random/x2</h3>
-				  </div>
-				  <div class="panel-body">
-					<span id="x2" class="mqtt-value">0</span>
-				  </div>
-				</div>
-			</div>
-			
-			<div class="col-md-4">
+		<div class="col-md-4">
 				<div class="panel panel-warning">
 				  <div class="panel-heading">
 					<h3 class="panel-title">Control</h3>
