--- a/mqtt2.html
+++ b/mqtt2.html
@@ -54,7 +54,7 @@
 			<div class="col-md-4">
 				<div class="panel panel-info">
 				  <div class="panel-heading">
-					<h3 class="panel-title">Tempurature In Home</h3>
+					<h3 class="panel-title">Temperature In Home</h3>
 				  </div>
 				  <div class="panel-body">
 					<span id="ice" class="mqtt-value">0</span>°C
