--- a/mqtt2.html
+++ b/mqtt2.html
@@ -21,7 +21,7 @@
 	<style>
 		.mqtt-value{
 			font-size:24px;
-			color:blue;
+			color:black;
 			margin-right:5px;
 		}
 	</style>
@@ -74,7 +74,7 @@
 		<div class="col-md-4">
 				<div class="panel panel-info">
 				  <div class="panel-heading">
-					<h3 class="panel-title">Control</h3>
+					<h3 class="panel-title">Control A Fan</h3>
 				  </div>
 				  <div class="panel-body">
 					<button type="button" class="btn btn-lg btn-primary btn-block" onclick="controlFan();">Press to turn on a Fan</button>
